app/assets/stylesheets/layouts.scss
body {
  @include media-breakpoint-down(md) {
    padding-top: 100vh;
  }

}
.section {
  position: relative;
  &__bounce {
    position: absolute;
    height: 2rem;
    width: 2rem;
    bottom: 1.5rem;
    left: 0;
    right: 0;
    margin: 0 auto;
  }
  &--map {
    height: 22rem;
  }
  &--header {
    display: flex;
    align-items: center;

    height: 36rem;
    background: image_url("background-left.jpg");
    background-position: center;
    background-size: cover;

    @include media-breakpoint-down(md) {
      position: fixed;
      width: 100%;
      top: 0;
      background: image_url("background-mobile.jpg");
      height: 100vh;
      background-position: center;
      background-size: cover;
    }
  }
  &--cta {
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 26rem;
  }
  &--notes {
    overflow: hidden;
  }
  @each $size, $value in $content-spacing {
    &--#{$size} {
      padding: $value 0 ;
    }
  }
  @each $color, $value in $theme-colors {
    &--#{$color} {
      background-color: $value;
    }
  }
}

